fixed padding footer and added z-index

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -163,6 +163,16 @@ h2 {
   font-size: 1.25em;
 }
 
+body > footer {
+  padding: 0px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 99;
+}
+
 .container-fluid {
   background-color: #181818;
   color: white;
@@ -180,10 +190,6 @@ h2 {
   border-radius: 9px;
 }
 
-#slider-round .noUi-connect {
-  background: white;
-}
-
 #slider-round2 {
   height: 7px;
 }
@@ -194,10 +200,6 @@ h2 {
   top: -5px;
   right: -9px;
   border-radius: 9px;
-}
-
-#slider-round2 .noUi-connect {
-  background: white;
 }
 
 .noUi-handle {
@@ -239,6 +241,7 @@ h2 {
   text-transform: uppercase;
   background-color: inherit;
   border: transparent;
+  -webkit-box-shadow: 0px 1px 15px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 15px 5px rgba(0, 0, 0, 0.1);
   color: #a7a7a7;
   font-size: 0.75em;
@@ -494,4 +497,6 @@ aside #main-right-nav .profile > p {
 #main-right-nav #album:hover {
   text-decoration: underline;
   color: #a7a7a7;
-}/*# sourceMappingURL=app.css.map */
+}
+
+/*# sourceMappingURL=app.css.map */
